--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "Mern Demo",
   "main": "server.js",
+  "proxy": "http://localhost:3001",
   "scripts": {
     "server": "node server.js",
     "client": "node scripts/start-client.js",
     "start": "concurrently \"nodemon server.js\" \"npm run client\"",
     "build": "node scripts/build.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "engines": {
+    "node": "8.9.2"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +24,7 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "bootstrap": "^3.3.7",
+    "dotenv": "^5.0.1",
     "express": "^4.15.4",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.13",
