--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "react-router-dom": "^4.2.2",
+    "react-slick": "0.23.1",
+    "slick-carousel": "1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
